--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
+requires = ["setuptools>=68.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -35,24 +35,56 @@ classifiers = [
 
 [tool.black]
 line-length = 100
-target-version = ["py39"]
-include = '\.pyi?$'
+target-version = ["py39", "py310"]
+include = '(.pyi?|.rst)$'
+extend-exclude = '''
+/(
+  # directories
+  \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.pytest_cache
+  | \.tox
+  | venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
 
 [tool.isort]
 profile = "black"
 line_length = 100
 known_first_party = ["mobile", "pwa"]
+known_third_party = ["appium", "playwright", "pytest", "pydantic", "loguru"]
+force_single_line = false
+use_parentheses = true
+ensure_newline_before_comments = true
 
 [tool.mypy]
 python_version = "3.9"
 warn_return_any = true
 warn_unused_configs = true
+warn_unused_ignores = true
 disallow_untyped_defs = false
 ignore_missing_imports = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+exclude = ["venv", ".venv", "tests"]
 
 [tool.pytest.ini_options]
 minversion = "7.0"
-addopts = "-ra -v --strict-markers --tb=short"
+addopts = """
+  -ra
+  -v
+  --strict-markers
+  --tb=short
+  --disable-warnings
+"""
 testpaths = ["mobile/tests", "pwa/tests"]
 python_files = "test_*.py"
 python_classes = "Test*"
@@ -61,5 +93,37 @@ markers = [
     "smoke: smoke tests",
     "regression: regression tests",
     "integration: integration tests",
-    "slow: slow tests"
+    "slow: slow tests",
+    "flaky: flaky tests that may fail intermittently"
 ]
+log_cli = false
+log_cli_level = "INFO"
+log_file = "pytest.log"
+log_file_level = "DEBUG"
+
+[tool.coverage.run]
+branch = true
+source = ["mobile/src", "pwa/src"]
+omit = [
+    "*/tests/*",
+    "*/test_*.py",
+    "*/__init__.py",
+    "*/venv/*"
+]
+
+[tool.coverage.report]
+precision = 2
+show_missing = true
+skip_covered = false
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "@abstractmethod"
+]
+
+[tool.coverage.html]
+directory = "htmlcov"
